--- a/styles.css
+++ b/styles.css
@@ -9,24 +9,25 @@ body {
     background-image: linear-gradient(rgb(14, 14, 18), rgb(38, 39, 50), rgb(14, 14, 18));
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
-    font-size: 20;
+    font-size: 150%;
     text-align: center;
     color: whitesmoke;
+    width: 100%;
 }
 
 h1 {
-    margin-top: 2em;
-    margin-left: 2em;
-    margin-right: 2em;
+    margin-top: 4%;
+    margin-left: 2%;
+    margin-right: 2%;
     text-align: left;
     word-wrap:break-word;
-    width: 90%;
+    width: 70%;
 }
 
 h1:after {
     content: " ";
     background: #3e3e49;
-    width: 90%;
+    width: 100%;
     height: 0.2%;
     display: block;
 }
@@ -46,7 +47,7 @@ p1 {
 }
 
 img {
-    max-width: 40%;
+    max-width: 70%;
 }
 
 -- Social Icons --
@@ -55,6 +56,7 @@ img {
     margin: 5%;
     position: relative;
     overflow: hidden;
+    scale: 100%;
 }
 
 .social a{
