--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     font-size: 150%;
     text-align: center;
     color: whitesmoke;
-    width: 100%;
+    max-width: 100%;
 }
 
 h1 {
@@ -25,7 +25,7 @@ h1 {
 }
 
 h1:after {
-    content: " ";
+    content: "";
     background: #3e3e49;
     width: 100%;
     height: 0.2%;
@@ -41,13 +41,19 @@ p {
     display: block;
 }
 
-p1 {
-    font-family: "BebasNeue", sans-serif;
-    font-size: 1.25em;
+li {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+    color: #d0d0d0;
+    font-size: 20px;
+    text-align: left;
+    max-width: 70%;
 }
 
 img {
+    position:sticky;
     max-width: 70%;
+    object-fit: contain;
 }
 
 -- Social Icons --
@@ -60,12 +66,12 @@ img {
 }
 
 .social a{
-    font-size: 150%;
+    font-size: 200%;
     color: rgb(245, 245, 245);
     filter: drop-shadow(0 0 0.2rem rgb(0, 242, 255));
     padding: 5px;
     margin: 5px;
-    display: inline-block;
+    display: inline-flexbox;
     transition: background-color 0.5s ease-in, color 0.5s ease-in, filter 0.5s ease-in;
     -webkit-transition: background-color 0.5s ease-in, color 0.5s ease-in, filter 0.5s ease-in;
     -moz-transition: background-color 0.5s ease-in, color 0.5s ease-in, filter 0.5s ease-in;
@@ -94,16 +100,37 @@ footer {
 }
 
 .btn {
+    font-size: 15px;
+    max-width: 70%;
+    min-width: 100%;
     color: yellow;
     text-decoration: none;
     padding: 0.5em;
-    border: 0.1em solid #fffb00;
+    border: 0.15em solid #fffb00;
     border-radius: 20em;
     background-color: rgba(27, 29, 37, 0);
     -webkit-border-radius: 20em;
     -moz-border-radius: 20em;
     -ms-border-radius: 20em;
     -o-border-radius: 20em;
-    filter: drop-shadow(0 0 0.3rem yellow);
-    -webkit-filter: drop-shadow(0 0 0.3rem yellow);
+    filter: drop-shadow(0 0 0.0rem yellow);
+    -webkit-filter: drop-shadow(0 0 0.0rem yellow);
+    transition: filter 0.5s ease-in, color 0.5s ease-in, filter 0.5s ease-in;
+    -webkit-transition: filter 0.5s ease-in, color 0.5s ease-in, filter 0.5s ease-in;
+    -moz-transition: filter 0.5s ease-in, color 0.5s ease-in, filter 0.5s ease-in;
+    -ms-transition: filter 0.5s ease-in, color 0.5s ease-in, filter 0.5s ease-in;
+    -o-transition: filter 0.5s ease-in, color 0.5s ease-in, filter 0.5s ease-in;
+}
+
+.btn:hover {
+    font-size: 15px;
+    max-width: 70%;
+    min-width: 100%;
+    filter: drop-shadow(0 0 0.5rem yellow);
+    transition: filter 0.5s ease-out, color 0.5s ease-out, filter 0.5s ease-out;
+    -webkit-filter: drop-shadow(0 0 0.5rem yellow);
+    -webkit-transition: filter 0.5s ease-out, color 0.5s ease-out, filter 0.5s ease-out;
+    -moz-transition: filter 0.5s ease-out, color 0.5s ease-out, filter 0.5s ease-out;
+    -ms-transition: filter 0.5s ease-out, color 0.5s ease-out, filter 0.5s ease-out;
+    -o-transition: filter 0.5s ease-out, color 0.5s ease-out, filter 0.5s ease-out;
 }
