--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     background-image: linear-gradient(rgb(14, 14, 18), rgb(38, 39, 50), rgb(14, 14, 18));
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
-    font-size: 150%;
+    font-size: 100%;
     text-align: center;
     color: whitesmoke;
     max-width: 100%;
@@ -41,6 +41,12 @@ p {
     display: block;
 }
 
+a {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+    color: yellow;
+}
+
 li {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
@@ -51,9 +57,10 @@ li {
 }
 
 img {
-    position:sticky;
-    max-width: 70%;
-    object-fit: contain;
+    width: 100%;
+    height: 20%;
+    object-fit:scale-down;
+
 }
 
 -- Social Icons --
@@ -92,7 +99,7 @@ img {
 }
 
 footer {
-    margin: 10%;
+    margin: 0%;
     display: flex;
     justify-content: center;
     background-color: #0a0b0e00;
